code cleanup and some solution settings changes

--- a/src/UnitTest.HandyToolbox.Shell/UnitTest.HandyToolbox.Shell.csproj
+++ b/src/UnitTest.HandyToolbox.Shell/UnitTest.HandyToolbox.Shell.csproj
@@ -16,4 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\HandyToolbox.Shell\HandyToolbox.Shell.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="*.cs~" />
+  </ItemGroup>
 </Project>
